# EvmCommMCP

./: .gitignore  .mcp.json.example  README.md  pyproject.toml
src/evmcomm/: reader.py  server.py  session.py
